# eggdrop-1.9

./: .cvsignore  AUTHORS  CONTENTS  ChangeLog  Doxyfile  FEATURES  INSTALL  Makefile.am  Makefile.in  NEWS  README  acconfig.h  acinclude.m4  aclocal.m4  bootstrap  channels.xml  config.h.in  config.tcl  config.xml  configure  configure.ac  configure.in  disabled_modules  eggdrop.advanced.conf  eggdrop.complete.conf  eggdrop.conf  eggdrop.simple.conf  tcl.license.terms
lib/compat/: Makefile.am  compat.h  inet_aton.c  inet_aton.h  inet_ntop.c  inet_ntop.h  inet_pton.c  inet_pton.h  memcpy.c  memcpy.h  memset.c  memset.h  poll.c  poll.h  snprintf.c  snprintf.h  strcasecmp.c  strcasecmp.h  strdup.c  strdup.h  strerror.c  strerror.h  strftime.h  strlcat.h  strlcpy.h  strncasecmp.c  strncasecmp.h  tclLoadAix.c
lib/eggdrop/: .cvsignore  Makefile.am  base64.c  base64.h  binds.c  binds.h  botnet.c  botnet.h  botnetutil.c  botnetutil.h  common.h  config.c  config.h  date.c  date.h  dns.c  dns.h  eggconfig.c  eggconfig.h  eggdns.c  eggdns.h  eggdrop.c  eggdrop.h  eggident.c  eggident.h  egglog.c  egglog.h  eggmod.c  eggmod.h  eggnet.c  eggnet.h  eggowner.c  eggowner.h  eggstring.c  eggstring.h  eggtimer.c  eggtimer.h  fileutil.c  fileutil.h  flags.c  (+71 more)
lib/egglib/: Makefile.am  avl.h  base64.c  base64.h  egglib.h  hash_table.c  hash_table.h  hash_table_test.c  linked_list.c  linked_list.h  linked_list_test.c  mempool.c  mempool.h  mempool_test.c  msprintf.c  msprintf.h  mstack.c  mstack.h  regexp.c  regexp.h
modules/blowfish/: Makefile.am  bf_tab.h  blowfish.c  blowfish.h  config.m4
modules/botnet/: Makefile.am  botnet.c  botnet.h  config.m4  events.c
modules/chanserv/: .cvsignore  Makefile.am  chanserv.c  chanserv.h  config.m4  egg_chanserv_internal.h  events.c  events.h
modules/compress/: Makefile.am  compress.c  compress.h  config.m4  modinfo  tclcompress.c
modules/console/: Makefile.am  console.c  console.h
modules/console/help/: console.help
modules/ctcp/: Makefile.am  ctcp.c  ctcp.h
modules/dccparty/: .cvsignore  Makefile.am  config.m4  dccparty.c  dccparty.h  events.c
modules/filesys/: Makefile.am  dbcompat.c  dbcompat.h  filedb3.c  filedb3.h  filelist.c  filelist.h  files.c  files.h  filesys.c  filesys.h  modinfo  tclfiles.c
modules/filesys/help/: filesys.help
modules/ircparty/: Makefile.am  config.m4  events.c  ircparty.c  ircparty.h
modules/javascript/: Makefile.am  config.m4  javascript.c
modules/notes/: Makefile.am  cmdsnote.c  notes.c  notes.h
modules/oldbotnet/: Makefile.am  PROTOCOL  config.m4  events.c  oldbotnet.c  oldbotnet.h
modules/perlscript/: .cvsignore  Makefile.am  config.m4  mod_iface.c  perlscript.c
modules/proxy/: Makefile.am  config.m4  http.c  proxy.c  proxy.h  socks5.c
modules/pythonscript/: Makefile.am  config.m4  mycallable.c  mydict.c  myegguser.c  mymodule.c  mystdio.c  pythonscript.c  pythonscript.h
modules/script/: Makefile.am  config.m4  egg_script_internal.h  scriptbind.c  scriptconfig.c  scriptdns.c  scriptlog.c  scriptmisc.c  scriptmod.c  scriptnet.c  scriptparty.c  scripttimer.c  scriptuser.c
modules/server/: Makefile.am  binds.c  binds.h  channel_events.c  channels.c  channels.h  cmdsserv.c  config.m4  dcc.c  dcc.h  dcc_commands.c  egg_server_api.c  egg_server_api.h  egg_server_internal.h  input.c  input.h  nicklist.c  nicklist.h  output.c  output.h  parse.c  parse.h  party_commands.c  schan.c  schan.h  scriptcmds.c  server.c  server.h  serverlist.c  serverlist.h  servmsg.c  servsock.c  servsock.h  tclserv.c  uhost_cache.c
modules/server/help/: server.help
modules/share/: Makefile.am  share.c  share.h  uf_features.c
modules/share/help/: share.help
modules/tclscript/: Makefile.am  config.m4  tclscript.c
modules/telnetparty/: Makefile.am  config.m4  events.c  telnetparty.c  telnetparty.h
modules/transfer/: Makefile.am  transfer.c  transfer.h
nettype/: Makefile.am  custom.irc.conf  custom.server.conf  dalnet.irc.conf  dalnet.server.conf  efnet.irc.conf  efnet.server.conf  hybridefnet.irc.conf  hybridefnet.server.conf  ircnet.irc.conf  ircnet.server.conf  undernet.irc.conf  undernet.server.conf
scripts/: CONTENTS  Makefile.am  action.fix.tcl  alltools.tcl  autobotchk  botchk  cmd_resolve.tcl  compat.tcl  getops.tcl  notes2.tcl  ques5.tcl  sentinel.tcl  userinfo.tcl  weed
scripts/help/: cmd_resolve.help  userinfo.help
scripts/tests/: test-server.tcl
src/: .cvsignore  Makefile.am  Makefile.in  bg.c  bg.h  botcmd.c  botcmd.h  botmsg.c  botmsg.h  botnet.c  botnet.h  chan.h  chanprog.c  chanprog.h  cmds.c  cmds.h  cmdt.h  core_binds.c  core_binds.h  core_config.c  core_config.h  core_party.c  core_party.h  cryptapi.h  dcc.c  dcc.h  dccutil.c  dccutil.h  debug.h  dns.c  dns.h  egg.h  egg_timer.c  egg_timer.h  eggdrop.h  flags.c  flags.h  irccmp.c  irccmp.h  lang.h  (+47 more)
src/adns/: .cvsignore  Makefile.am  Makefile.in  README.eggdrop  aclocal.m4  adns.h  adns.make  check.c  config.h.in  configure  configure.in  event.c  internal.h  query.c  setup.c  transmit.c  types.c
src/compat/: Makefile.am  Makefile.in  compat.h  inet_aton.c  inet_aton.h  inet_ntop.c  inet_ntop.h  inet_pton.c  inet_pton.h  memcpy.c  memcpy.h  memset.c  memset.h  snprintf.c  snprintf.h  strcasecmp.c  strcasecmp.h  strftime.h  strncasecmp.c  strncasecmp.h
src/egglib/: .cvsignore  Makefile.am  avl.c  hash_table.c  hash_table.h  linked_list.c  linked_list.h  linked_list_test.c  mempool.c  mempool_test.c  msprintf.c  msprintf.h  mstack.h
src/md5/: Makefile.am  Makefile.in
src/mod/: .cvsignore  Makefile.am  Makefile.in  module.h  modvals.h
src/mod/assoc.mod/: Makefile  Makefile.am  assoc.c  assoc.h
src/mod/blowfish.mod/: Makefile  Makefile.am  bf_tab.h  blowfish.c  blowfish.h
src/mod/channels.mod/: Makefile  Makefile.am  channels.c  channels.h  cmdschan.c  tclchan.c  udefchan.c  userchan.c
src/mod/compress.mod/: .cvsignore  Makefile.am  Makefile.in  compress.c
src/mod/console.mod/: Makefile  Makefile.am  console.c  console.h
src/mod/ctcp.mod/: Makefile  Makefile.am  ctcp.c
src/mod/filesys.mod/: Makefile  Makefile.am  (+9 more)
(+223 files in other folders)
