# $Id: Makefile.am,v 1.3 2002/10/07 22:36:36 stdarg Exp $

## libcompat is built as convenience library

MAINTAINERCLEANFILES	= Makefile.in

INCLUDES		= -I$(top_builddir) -I$(top_srcdir)

noinst_LTLIBRARIES	= libegg.la
libegg_la_SOURCES	= avl.c \
			avl.h \
			base64.c \
			base64.h \
			egglib.h \
			linked_list.c \
			linked_list.h \
			mempool.c \
			mempool.h \
			msprintf.c \
			msprintf.h \
			mstack.c \
			mstack.h
